fix: tab/myschedule align feat: about

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #23398A;
   background-color: #E8EBF8;
 }
 
@@ -21,7 +22,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: #E8EBF8;
     background: #08174B;
   }
 }
